@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-23T00:56:17Z",
+  "timestamp" : "2022-05-23T08:15:32Z",
   "count_outdated" : 290,
   "uniques_outdated" : 150,
-  "count" : 328,
+  "count" : 327,
   "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
